--- a/vocabspa-war/src/main/webapp/WEB-INF/web.xml
+++ b/vocabspa-war/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,10 @@
     <servlet>
         <servlet-name>jersey-serlvet</servlet-name>
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-        <init-param>
+        <!--<init-param>
             <param-name>com.sun.jersey.config.property.resourceConfigClass</param-name>
             <param-value>com.sun.jersey.api.core.PackagesResourceConfig</param-value>
-        </init-param>
+        </init-param>-->
         <init-param>
             <param-name>com.sun.jersey.config.property.packages</param-name>
             <param-value>vocabspa.resource</param-value>
