--- a/vocabspa-war/src/main/webapp/WEB-INF/web.xml
+++ b/vocabspa-war/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,6 @@
     <servlet>
         <servlet-name>jersey-serlvet</servlet-name>
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-        <!--<init-param>
-            <param-name>com.sun.jersey.config.property.resourceConfigClass</param-name>
-            <param-value>com.sun.jersey.api.core.PackagesResourceConfig</param-value>
-        </init-param>-->
         <init-param>
             <param-name>com.sun.jersey.config.property.packages</param-name>
             <param-value>vocabspa.resource</param-value>
@@ -39,6 +35,16 @@
     <welcome-file-list>
         <welcome-file>welcome.jsp</welcome-file>
     </welcome-file-list>
+
+    <filter>
+        <filter-name>guiceFilter</filter-name>
+        <filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>guiceFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <security-constraint>
         <web-resource-collection>
